--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "start": "npm-run-all -p watch-css start-js",
     "build": "npm run build-css && react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "gulp browserify",
-    "start": "node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
